--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ google-cloud-datastore>=1.8<=2.0dev
 flask
 flask_cors
 multiwrapper
+middle-auth-client>=3.8.1
 python-json-logger
 zstandard
 redis
