--- a/cloudbuild.v1.ingest.yaml
+++ b/cloudbuild.v1.ingest.yaml
@@ -1,32 +1,10 @@
 steps:
-  - name: "gcr.io/cloud-builders/docker"
-    entrypoint: "bash"
-    args: ["-c", "docker login --username=$$USERNAME --password=$$PASSWORD"]
-    secretEnv: ["USERNAME", "PASSWORD"]
-  - name: "gcr.io/cloud-builders/docker"
-    timeout: 600s
-    args:
-      - build
-      - "--tag=gcr.io/neuromancer-seung-import/pcgl2cache:ingest_v1_$TAG_NAME"
-      - "--file=./ingest.Dockerfile"
-      - .
-  - name: "gcr.io/cloud-builders/docker"
-    entrypoint: "bash"
-    args:
-      [
-        "-c",
-        "docker tag gcr.io/$PROJECT_ID/pcgl2cache:ingest_v1_$TAG_NAME $$USERNAME/pcgl2cache:ingest_v1_$TAG_NAME",
-      ]
-    secretEnv: ["USERNAME"]
-  - name: "gcr.io/cloud-builders/docker"
-    entrypoint: "bash"
-    args: ["-c", "docker push $$USERNAME/pcgl2cache:ingest_v1_$TAG_NAME"]
-    secretEnv: ["USERNAME"]
+- name: "gcr.io/cloud-builders/docker"
+  timeout: 600s
+  args:
+  - build
+  - "--tag=gcr.io/neuromancer-seung-import/pcgl2cache:ingest_v1"
+  - "--file=./ingest.Dockerfile"
+  - .
 images:
-  - "gcr.io/neuromancer-seung-import/pcgl2cache:ingest_v1_$TAG_NAME"
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/docker-password/versions/1
-      env: "PASSWORD"
-    - versionName: projects/$PROJECT_ID/secrets/docker-username/versions/1
-      env: "USERNAME"
+- "gcr.io/neuromancer-seung-import/pcgl2cache:ingest_v1"
