--- a/cloudbuild.v1.worker.yaml
+++ b/cloudbuild.v1.worker.yaml
@@ -8,7 +8,7 @@ steps:
     args:
       - build
       - "--tag=gcr.io/neuromancer-seung-import/pcgl2cache:worker_pcgv1_$TAG_NAME"
-      - "--file=./ingest.Dockerfile"
+      - "--file=./ingest.v1.Dockerfile"
       - .
   - name: "gcr.io/cloud-builders/docker"
     entrypoint: "bash"
