--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,34 @@
 steps:
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/pychunkedgraph', '.' ]
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    docker build -t gcr.io/$PROJECT_ID/pcgl2cache:$TAG_NAME .
-  timeout: 600s
-#- name: 'gcr.io/cloud-builders/docker'
-#  entrypoint: 'bash'
-#  args:
-#  - '-c'
-#  - |
-#    [[ "$BRANCH_NAME" == "master" ]] && docker build -t gcr.io/$PROJECT_ID/pychunkedgraph .
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args: ["-c", "docker login --username=$$USERNAME --password=$$PASSWORD"]
+    secretEnv: ["USERNAME", "PASSWORD"]
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/pcgl2cache', '.' ]
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        docker build -t gcr.io/$PROJECT_ID/pcgl2cache:$TAG_NAME .
+    timeout: 600s
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "docker tag gcr.io/$PROJECT_ID/pcgl2cache:$TAG_NAME $$USERNAME/pcgl2cache:$TAG_NAME",
+      ]
+    secretEnv: ["USERNAME"]
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args: ["-c", "docker push $$USERNAME/pcgl2cache:$TAG_NAME"]
+    secretEnv: ["USERNAME"]
 images:
-- 'gcr.io/$PROJECT_ID/pcgl2cache:$TAG_NAME'
+  - "gcr.io/$PROJECT_ID/pcgl2cache:$TAG_NAME"
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/docker-password/versions/1
+      env: "PASSWORD"
+    - versionName: projects/$PROJECT_ID/secrets/docker-username/versions/1
+      env: "USERNAME"
