--- a/cloudbuild.v1.worker.yaml
+++ b/cloudbuild.v1.worker.yaml
@@ -1,10 +1,26 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args: ["-c", "docker login --username=$$USERNAME --password=$$PASSWORD"]
+    secretEnv: ["USERNAME", "PASSWORD"]
+  - name: "gcr.io/cloud-builders/docker"
     timeout: 600s
     args:
       - build
       - "--tag=gcr.io/neuromancer-seung-import/pcgl2cache:worker_pcgv1_$TAG_NAME"
       - "--file=./ingest.Dockerfile"
       - .
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args:
+      [
+        "-c",
+        "docker tag gcr.io/$PROJECT_ID/pcgl2cache:worker_pcgv1_$TAG_NAME $$USERNAME/pcgl2cache:worker_pcgv1_$TAG_NAME",
+      ]
+    secretEnv: ["USERNAME"]
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args: ["-c", "docker push $$USERNAME/pcgl2cache:worker_pcgv1_$TAG_NAME"]
+    secretEnv: ["USERNAME"]
 images:
   - "gcr.io/neuromancer-seung-import/pcgl2cache:worker_pcgv1_$TAG_NAME"
