--- a/cloudbuild.v1.worker.yaml
+++ b/cloudbuild.v1.worker.yaml
@@ -24,3 +24,9 @@ steps:
     secretEnv: ["USERNAME"]
 images:
   - "gcr.io/neuromancer-seung-import/pcgl2cache:worker_pcgv1_$TAG_NAME"
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/docker-password/versions/1
+      env: "PASSWORD"
+    - versionName: projects/$PROJECT_ID/secrets/docker-username/versions/1
+      env: "USERNAME"
